--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ blocks div {
             const value3 = parseInt(document.getElementById('slider').value, 10); // Ensure it's a number
             console.log(sliderValue);
             try {
-                const response = await fetch('https://aea2-176-111-180-96.ngrok-free.app/schedule', {
+                const response = await fetch(' https://b5b1-176-111-180-96.ngrok-free.app/schedule', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
