--- a/index.html
+++ b/index.html
@@ -288,6 +288,25 @@ blocks div {
     color: rgb(0, 0, 0);
 }
 
+#error-box {
+        display: none; /* Hidden by default */
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        max-width: 600px;
+        background-color: #ff4d4d; /* Red background */
+        color: white;
+        text-align: center;
+        font-size: 24px;
+        padding: 20px;
+        border-radius: 12px; /* Smooth edges */
+        z-index: 1001; /* Ensure it's above other content */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional: add shadow for better visibility */
+    }
+
+
 /* Existing styles here */
 
 @import url('https://fonts.googleapis.com/css?family=Space%20Grotesk:700|Space%20Grotesk:400');
@@ -319,7 +338,7 @@ blocks div {
     --m: 1rem;
   }
     td, th {
-        padding: 4px; /* Reduce padding for smaller screens */
+        padding: 7px; /* Reduce padding for smaller screens */
     }
     
     th:first-child, td:first-child {
@@ -358,10 +377,14 @@ blocks div {
 
     <div id="schedule-container"></div>
     <div id="response-container"></div>
+    <div id="error-box">
+        There has been an error, make sure that you entered everything correctly.
+    </div>
 
     <script>
         // Function to show modal
         document.getElementById('modal').style.display = 'none';
+        document.getElementById('error-box').style.display = 'none';
         function showModal() {
             document.getElementById('modal').style.display = 'flex';
         }
@@ -430,7 +453,7 @@ blocks div {
             const value3 = parseInt(document.getElementById('slider').value, 10); // Ensure it's a number
             console.log(sliderValue);
             try {
-                const response = await fetch('https://e695-176-111-180-96.ngrok-free.app/schedule', {
+                const response = await fetch('https://79f1-176-111-180-96.ngrok-free.app/schedule', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -452,6 +475,7 @@ blocks div {
 
                 const weekDays = ['Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб', 'Нд'];
                 const timeSlots = ['1', '2', '3', '4', '5', '6', '7', '8'];
+                
 
                 dayBlocks.forEach(dayBlock => {
                     const day = dayBlock.textContent.trim();
@@ -521,6 +545,7 @@ blocks div {
                 const body = document.createElement('tbody');
                 const blocks = document.createElement('blocks');
                 blocks.style.float = 'left';
+                blocks.style.width = '500px';
 
                 const headerRow = document.createElement('tr');
                 const firstCell = document.createElement('th');
@@ -662,6 +687,7 @@ blocks div {
 
             } catch (error) {
                 console.error('Error fetching schedule:', error);
+                document.getElementById('error-box').style.display = 'block';
             }
         }
     </script>
